--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
 #requirements.txt
-numpy==1.17.0
-streamlit==0.49.0
-plotly==3.10.0
-pandas==0.25.0
-chart_studio==1.0.0
-fbprophet==0.5
-pystan==2.19.1.1
+streamlit
+fbprophet
+yfinance
+plotly
