Updated Requirements file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 #requirements.txt
-streamlit
-fbprophet
-yfinance
-plotly
+streamlit==0.82.0
+pystan==2.19.1.1
+plotly==4.14.3
+fbprophet==0.7.1
+yfinance==0.1.59
